--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "request": "launch",
             "name": "via launch.ps1",
             "script": "${workspaceFolder}/launch.ps1",
+            "createTemporaryIntegratedConsole": true,
             "args": ["${file}"]
         }
     ]
