Added the ability to set a special build output directory

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,10 @@
             "name": "via launch.ps1",
             "script": "${workspaceFolder}/launch.ps1",
             "createTemporaryIntegratedConsole": true,
-            "args": ["${file}"]
+            "args": [
+                "temp",
+                "${file}"
+            ]
         }
     ]
 }
