Added an additional config to launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,13 @@
                 "temp",
                 "${file}"
             ]
+        },
+        {
+            "type": "PowerShell",
+            "request": "launch",
+            "name": "Run In Current Session",
+            "script": "${file}",
+            "createTemporaryIntegratedConsole": false
         }
     ]
 }
